@@ -1,7 +1,6 @@
 package api.sebastian.service;
 
 import api.sebastian.dto.EntregaDTO;
-import api.sebastian.dto.EntregaRespuestaDTO;
 import api.sebastian.model.Cliente;
 import api.sebastian.model.Entrega;
 import api.sebastian.repository.ClienteRepository;
@@ -9,40 +8,34 @@ import api.sebastian.repository.EntregaRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EntregaService {
-
-    private final EntregaRepository entregaRepository;
     private final ClienteRepository clienteRepository;
+    private final EntregaRepository entregaRepository;
 
-    public Entrega crearEntrega(EntregaDTO dto) {
-        Cliente cliente = clienteRepository.findById(dto.getClienteCorreo())
-                .orElseThrow(() -> new RuntimeException("Cliente no encontrado."));
+    public Entrega crearEntrega(Entrega entrega) {
+        Cliente cliente = clienteRepository.findByCorreo(entrega.getClienteCorreo())
+                .orElseThrow(() -> new RuntimeException("Cliente no encontrado con correo: " + entrega.getClienteCorreo()));
 
-        Entrega entrega = Entrega.builder()
-                .nombreEntrega(dto.getNombreEntrega())
-                .fechaEntrega(dto.getFechaEntrega())
-                .fechaCreacion(LocalDateTime.now())
-                .cliente(cliente)
-                .build();
-
+        entrega.setCliente(cliente);
         return entregaRepository.save(entrega);
     }
 
-    public List<EntregaRespuestaDTO> obtenerPorCorreoConCliente(String correo) {
-        List<Entrega> entregas = entregaRepository.findByClienteCorreo(correo);
+    public List<EntregaDTO> obtenerEntregasPorCorreoCliente(String correo) {
+        List<Entrega> entregas = entregaRepository.findByCliente_Correo(correo);
 
-        return entregas.stream().map(e -> EntregaRespuestaDTO.builder()
-                .nombreEntrega(e.getNombreEntrega())
-                .fechaEntrega(e.getFechaEntrega())
-                .fechaCreacion(e.getFechaCreacion())
-                .nombreCliente(e.getCliente().getNombre())
-                .celularCliente(e.getCliente().getCelular())
-                .build()
-        ).toList();
+        return entregas.stream().map(e -> {
+            EntregaDTO dto = new EntregaDTO();
+            dto.setNombreEntrega(e.getNombreEntrega());
+            dto.setFechaEntrega(e.getFechaEntrega());
+            dto.setClienteCorreo(e.getCliente().getCorreo());
+            dto.setNombreCliente(e.getCliente().getNombre() + " " + e.getCliente().getApellido());
+            dto.setCelularCliente(e.getCliente().getCelular());
+            return dto;
+        }).collect(Collectors.toList());
     }
 }
